--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 ﻿<!DOCTYPE html>
-<html>
-    <body>
-        <h1 style="color:blue;">Hello World</h1>
-        <p style="color:blue;">I'm hosted with GitHub Pages.</p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+    </header>
+    <section>
+        <h2>About Me</h2>
+        <p>TBD</p>
+    </section>
+    <section>
+        <h2>Projects</h2>
+        <p>TBD</p>
+    </section>
+</body>
 </html>
