Updated About Me

--- a/index.html
+++ b/index.html
@@ -168,10 +168,9 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              I am a 24 year old student attending Dallas College where I am achieving my AS in Computer Science. After achieving that I will be
+              transferring to the University of Texas at Dallas where I will recieve my BS in Computer Science. I was born and raised in Texas and have lived there
+              almost my entire life. I plan on going into game development.
             </p>
             <!-- Provide a link to your resume -->
             <a href="#" class="btn">My Resume</a>
