--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Jonathan Robert Hauber's Portfolio
+    Jonathan Hauber's Portfolio
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -56,7 +56,7 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Jonathan Robert Hauber</span>
+          <span>Jonathan R Hauber</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p>Computer Science Student from Dallas, Texas</p>
