--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
   Hello 😊.
 
   This template is designed and developed by Nisar Hassan Naqvi
@@ -87,74 +87,65 @@
             </div>
             <div class="work__image-box">
             </div>
-          </div>
+          </div> -->
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Task Organization Discord Bot</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                A bot written in python to help organize tasks for Bitcraft and ensure cooperative sharing of resources.
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Python</li>
+                <li>SQLite</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://github.com/JRHauber/LegionBot" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
+                <a href="https://github.com/JRHauber/LegionBot">
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="./images/project-1.jpg" class="work__image" alt="Project 1" />
             </div>
           </div>
-
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
+              <h3>United Nations of Bitcraft Bot</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                A bot written in python to help organize and facilitate voting in the United Nations of Bitcraft project.
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Python</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://github.com/JRHauber/UNBot" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
+                <a href="https://github.com/JRHauber/UNBot">
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="./images/project-2.png" class="work__image" alt="Project 2" />
             </div>
           </div>
         </div>
       </div>
     </section>
-  -->
-    <!-- ***** Clients ***** 
+    <!-- ***** Clients *****
 
     <section class="client" id="clients">
       <div class="row">
         <h2>Clients</h2>
         <div class="client__logos">
-           Add logos of the clients or companies you'have worked with. 
+           Add logos of the clients or companies you'have worked with.
         </div>
       </div>
     </section> -->
